# verneuil

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
c/: file_ops.c  file_ops.h  linuxvfs.c  replace_malloc.h  vfs.c  vfs.h
doc/: CHANGE_TRACKING.md  DESIGN.md  INCREMENTAL_BACKUP_RESTORE.md  REPLICATION_BUFFER.md  SNAPSHOTS.md  SNAPSHOT_VFS.md  VFS.md  WELL_KNOWN_FINGERPRINTS.md
examples/: rusqlite_integration.rs  verneuil-restore.rs  verneuil_vfs.rs  verneuilctl.rs
include/: linuxvfs.h  verneuil.h
src/: atomic_kv32.rs  copier.rs  directory_schema.rs  executor.rs  instance_id.rs  lazy_buckets.rs  lib.rs  loader.rs  manifest_schema.rs  ofd_lock.rs  process_id.rs  racy_time.rs  recent_work_set.rs  replication_buffer.rs  replication_target.rs  result.rs  snapshot.rs  snapshot_vfs_ops.rs  sqlite_code.rs  sqlite_lock_level.rs  tracker.rs  unzstd.rs  vfs_ops.rs
src/tracker/: invariants.rs  mod.rs  snapshot_file_contents.rs
t/: test.sh  test_with_minio.json
