[package]
name = "verneuil"
version = "0.1.0"
description = "A sqlite VFS for asynchronous replication to S3-compatible blob stores"
license = "MIT"
repository = "https://github.com/backtrace-labs/verneuil"
authors = ["Backtrace I/O <team@backtrace.io>"]
edition = "2018"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[example]]
name = "verneuil_vfs"
crate-type = ["cdylib"]
required-features = ["dynamic_vfs"]

[[example]]
name = "verneuilctl"
crate-type = ["bin"]
required-features = ["vendor_sqlite"]

[features]
vendor_sqlite = []
dynamic_vfs = []  # Build the runtime-loadable VFS shared object; conflicts with vendor_sqlite.

no_xattr = []  # Remove the xattr code to simulate feature-poor filesystems.

test_vfs = ["blake2b_simd", "tracing-subscriber"]  # Build an archive for sqlite3 tests.
test_validate_writes = ["test_vfs"]  # Validate snapshots after writes
test_validate_reads = ["test_vfs"]  # Validate snapshots after reads as well (extra slow)
test_validate_all = ["test_validate_writes", "test_validate_reads"]

[dependencies]
backtrace = "0.3"
# We use blake2b to compare the actual db file and our replicated snapshot,
# but only during tests.
blake2b_simd = { version = "0.5", optional = true }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
governor = { version = "0.3", default-features = false, features = ["std", "jitter"] }  # 0.3 doesn't build without "jitter"
itertools = "0.10"
lazy_static = "1"
libc = "0.2"
lru = { version = "0.6", default-features = false }  # Disable hashbrown
percent-encoding = "2"
prost = "0.7"
rand = "0.8"
rayon = "1.5"
regex = "1"
rust-s3 = { version = "0.27.0-rc4", git = "https://github.com/backtrace-labs/rust-s3", rev = "f70b8a72596bc1fd4bbafaf59a9cf105666fda90", default-features = false, features = ["tokio-rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1", features = ["rt", "time"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.2", optional = true, features = ["tracing-log"] }  # Also collect log! calls.
uluru = "2"
umash = "0.1.2"
uuid = { version = "0.8", features = ["v4"] }
zstd = "0.9"

[dev-dependencies]
tracing-subscriber = { version = "0.2", features = ["tracing-log"] }  # Examples set up tracing.
structopt = "0.3"

[build-dependencies]
cc = "1"
